JSAI/error/src/test/resources/base/v005.js
var x = {foo: 1};
print(x.foo);